// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorDialog onClose omitted 1`] = `
Array [
  <div
    className="modal-backdrop show"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="modal"
    onClick={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex={-1}
  >
    <div
      className="modal-dialog"
      onMouseDown={[Function]}
    >
      <div
        className="modal-content"
      >
        <div
          className="bg-warning modal-header"
        >
          <div
            className="modal-title h4"
          >
            Error
          </div>
          <button
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
            <span
              className="sr-only"
            >
              Close
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          Error details onClose omitted
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`ErrorDialog renders 1`] = `
Array [
  <div
    className="modal-backdrop show"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="modal"
    onClick={[Function]}
    onMouseUp={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex={-1}
  >
    <div
      className="modal-dialog"
      onMouseDown={[Function]}
    >
      <div
        className="modal-content"
      >
        <div
          className="bg-warning modal-header"
        >
          <div
            className="modal-title h4"
          >
            Error
          </div>
          <button
            className="close"
            onClick={[Function]}
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ×
            </span>
            <span
              className="sr-only"
            >
              Close
            </span>
          </button>
        </div>
        <div
          className="modal-body"
        >
          Error details renders
        </div>
      </div>
    </div>
  </div>,
]
`;
